added a couple states

--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-    <div class="container">
-      <p>Welcome to your life.</p>
-    </div>
+  <body ng-app="app">
+    <nav>
+      <a href="/#/">Home</a>
+      <a href="/#/about">About</a>
+      <a href="/#/contact">Contact</a>
+    </nav>
+    <div class="container" ui-view></div>
     <script src="js/bundle.js"></script>
   </body>
 </html>
