--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
     <nav>
       <a href="/#/">Home</a>
       <a href="/#/about">About</a>
-      <a href="/#/contact">Contact</a>
+      <a href="/#/contact">Contact</a> | 
+      <a href="/#/add">Add Gif</a>
     </nav>
     <div class="container" ui-view></div>
     <script src="js/bundle.js"></script>
