finished before added abstract state

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
       <a href="/#/add">Add Gif</a>
     </nav>
     <div class="container" ui-view></div>
+    <footer>
+      &copy 2016 | Tim's Gif STuff
+    </footer>
     <script src="js/bundle.js"></script>
   </body>
 </html>
